# computational-statistics-2

./: .gitignore  README.md  assignment_02.ipynb  complete_enumeration.py  exercise_01.ipynb  exercise_01.py  exercise_8.1.ipynb  graycode_enum.py  graycode_fast.py  law.csv  pyproject.toml  removals.ipynb
