[tool.poetry]
name = "computational-statistics-2"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "computational_statistics_2"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
statsmodels = "^0.13.5"
scipy = "^1.10.1"
numpy = "^1.24.2"
joblib = "^1.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"
jupyter = "^1.0.0"
black = {extras = ["jupyter"], version = "^23.1.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
